--- a/src/scss/components/SendFormComponents/sendStuffForm.scss
+++ b/src/scss/components/SendFormComponents/sendStuffForm.scss
@@ -86,6 +86,9 @@
         font-size: 1.5rem;
         margin-bottom: 20px;
       }
+      @media (max-width: 600px) {
+        margin-bottom: 10px;
+      }
       @media (min-width: 350px) {
         font-size: 1.3rem;
       }
